CSS Animation Fixes on Mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -18,10 +18,9 @@ body{
 @media(max-width: 600px) {
     .main-window{
         position: absolute;
-        top: 56px;
+        /*top: 56px;*/
         left: 0;
         right: 0;
-        /*bottom: 0;*/
         height: 100%;
     }
 }
